# pansophical

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  config.toml  demo.py  test_confirm.py
.github/workflows/: release.yml
docs/: appcontainer_acl_plan.md  implementation_plan.md  planning.md  sandbox-future-work.md  tools.md
src/: error.rs  limits.rs  main.rs  reaper.rs  session.rs
src/audit/: mod.rs
src/authz/: glob.rs  intersection.rs  mod.rs  tests.rs
src/config/: mod.rs  perm.rs  policy_target.rs  schema.rs  watcher.rs
src/confirm/: mod.rs  server.rs  session.rs  token.rs  ui.rs
src/protocol/: lifecycle.rs  messages.rs  mod.rs  progress.rs  resources.rs
src/sandbox/: linux.rs  mod.rs  pool.rs  windows.rs
src/tools/: mod.rs  script.rs
src/tools/builtin/: create_directory.rs  delete_file.rs  file_info.rs  list_dir.rs  mod.rs  move_file.rs  read_file.rs  request_access.rs  search_files.rs  write_file.rs
src/transport/: http.rs  mod.rs  stdio.rs
tools/: ast_callees.toml  ast_callers.toml  ast_digest.toml  ast_implements.toml  ast_map.toml  ast_reverse_deps.toml  ast_search.toml  ast_show.toml  echo_test.toml  fetch_news.toml  google_search.toml  web_search.toml
